--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
   "name": "youtube-channel-analyzer-backend",
   "version": "1.0.0",
-  "description": "YouTube Channel Analyzer Backend",
+  "description": "Backend for YouTube Channel Analyzer",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.2.0",
-    "@mui/material": "^6.2.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "axios": "^1.7.9",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "googleapis": "^128.0.0",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.0",
-    "react-router-dom": "^7.0.2",
-    "winston": "^3.11.0"
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
