Update backend dependencies

--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/(.*)",
       "dest": "src/index.js"
     }
-  ],
-  "env": {
-    "PORT": "4001",
-    "MONGODB_URI": "@mongodb_uri",
-    "YOUTUBE_API_KEY": "@youtube_api_key",
-    "CORS_ORIGIN": "@cors_origin"
-  }
+  ]
 } 
