--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "googleapis": "^129.0.0",
-    "mongoose": "^8.9.1"
+    "googleapis": "^129.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
